[gd_scene load_steps=4 format=3 uid="uid://dwow2xuxsab1"]

[ext_resource type="Script" path="res://scenes/settings_hud.gd" id="1_5xdce"]
[ext_resource type="Texture2D" uid="uid://dv5fqy2jv67rd" path="res://art/backgrounds/settingsBackground.jpg" id="2_j7cmv"]
[ext_resource type="FontFile" uid="uid://kscown4twdb3" path="res://fonts/Xolonium-Regular.ttf" id="3_qtr5c"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5xdce")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.486275, 0.486275, 0.486275, 1)
self_modulate = Color(0.631373, 0.490196, 0.678431, 1)
position = Vector2(175, 326)
texture = ExtResource("2_j7cmv")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -136.0
offset_right = 87.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_qtr5c")
theme_override_font_sizes/font_size = 64
toggle_mode = true
text = "Back"

[node name="MusicControls" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MusicSlider" type="HSlider" parent="MusicControls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0875
anchor_top = 0.5
anchor_right = 0.727083
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = -30.0
max_value = 0.0
value = -5.0
metadata/_edit_use_anchors_ = true

[node name="MusicMuteButton" type="CheckButton" parent="MusicControls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.752083
anchor_top = 0.494444
anchor_right = 0.966667
anchor_bottom = 0.506944
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_qtr5c")
theme_override_font_sizes/font_size = 20
text = "Mute
"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MusicControls"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 43.0
offset_top = -43.0
offset_right = -352.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Music"

[node name="SfxControls" type="Control" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="SfxSlider" type="HSlider" parent="SfxControls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0875
anchor_top = 0.5
anchor_right = 0.727083
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = -30.0
max_value = 0.0
value = -5.0
metadata/_edit_use_anchors_ = true

[node name="SfxMuteButton" type="CheckButton" parent="SfxControls"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.752083
anchor_top = 0.494444
anchor_right = 0.966667
anchor_bottom = 0.506944
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_qtr5c")
theme_override_font_sizes/font_size = 20
text = "Mute
"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="SfxControls"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 44.0
offset_top = -43.0
offset_right = -186.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Sound Effects"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.916667
anchor_bottom = 0.279167
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_qtr5c")
theme_override_font_sizes/font_size = 15
text = "--------------------- Move ---------------------
W-A-S-D or arrow keys 
--------------------- Start Game ---------------------
SpaceBar or click
---------------------  Select Characters --------------------- 
Click Start 
---------------------  Select Settings --------------------- 
Esc or Click"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="BackButton" to="." method="_on_back_button_toggled"]
[connection signal="value_changed" from="MusicControls/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="MusicControls/MusicMuteButton" to="." method="_on_music_mute_button_toggled"]
[connection signal="value_changed" from="SfxControls/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
